--- a/wp-content/themes/otoplenie/style.css
+++ b/wp-content/themes/otoplenie/style.css
@@ -117,20 +117,22 @@ ul {
 
 #header {
     background: #fff;
-	
 	height: 135px;
 	border-bottom: 1px solid #006DB5;
 	position: relative;
+	
 }
 #headerimg {
 	position: relative;
-	width: 1000px;
-    margin: 0 auto;
+  
 }
 
 #inheaderimg {
-    float: left;
+  
     padding: 17px 0 0 5px;
+   width:220px;
+    margin: 0 auto;
+
 }
 
 .HeaderAdv { padding: 0 0 0 32px; float: left;}
@@ -1189,6 +1191,28 @@ ul.sub-menu {
     margin-bottom: 10px !important;
     padding-left: 10px !important;
 }
+
+@media only screen and (min-width : 320px) {
+	
+	}
+
+@media only screen and (min-width : 480px) {
+}
+
+@media only screen and (min-width : 768px) {
+	
+}
+
+@media only screen and (min-width : 992px) {
+	
+
+}
+
+
+	
+@media only screen and (min-width : 1248px) {
+}
+
 
 
 
