--- a/wp-content/themes/otoplenie/style.css
+++ b/wp-content/themes/otoplenie/style.css
@@ -435,7 +435,7 @@ ul {
 }
 
 #infooter {
-   width: 1000px;
+  // width: 1000px;
    margin: 0 auto;
    padding: 5px 0; 
 }
@@ -457,15 +457,15 @@ ul {
 }
 
 #footer .left-col {
-	
-	float: left;
+	text-align: center;
+	//float: left;
 	margin-left: 10px;
 }
 
 .left-col2 {
-   width: 700px;
+  // width: 700px;
    float: left;
-   padding: 0 0 0 40px; 
+   padding: 0 0 0 15px; //40
 }
 
 .left-col2 ul {
@@ -483,7 +483,8 @@ ul {
 }
 
 #footer .right-col{
-	float: right;
+	//float: right;
+	text-align: center;//
 	padding-right: 10px;
 	padding-left: 10px;
 	/*background: url(images/footer-right-bg.gif) no-repeat;*/
@@ -1211,7 +1212,30 @@ ul.sub-menu {
    width:unset;
 }
 
+#infooter {
+  // width: 1000px;
+   margin: 0 auto;
+   padding: 5px 0; 
+}
 
+#infooter p {
+   font-size: 12px;
+   margin: 0;
+   padding: 0 0 5px;; 
+}
+
+#footer a:link, #footer a:visited{
+	color: #000;
+    text-decoration: underline;
+}
+
+#footer a:hover{
+    color: #000;
+    text-decoration: none;
+}
+
+
+	
 
 
 }
@@ -1219,6 +1243,22 @@ ul.sub-menu {
 @media only screen and (min-width : 992px) {
 	.menu-top-container { margin: 0 auto; width: 1000px;}
 	#menu-top { text-align:left;}
+
+
+		//footer
+
+	#footer .left-col {
+    text-align: center;
+    float: left !important ;
+    margin-left: 10px;
+}
+	.left-col2 {
+	  width: 700px;	   
+	   padding: 0 0 0 40px; //40
+	}
+	#footer .right-col{
+		float: right;	
+	}
 
 }
 
